move clusters to own file

--- a/challenge.ipynb
+++ b/challenge.ipynb
@@ -9,11 +9,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import vcf\n",
     "import numpy as np\n",
     "from scipy.stats import mode\n",
     "import sklearn.metrics\n",
-    "from sklearn import cluster"
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from TumorTruths import TumorTruths"
    ]
   },
   {
@@ -24,21 +24,9 @@
    },
    "outputs": [],
    "source": [
-    "def GetResultsArray(svnCalls, results):\n",
-    "    \n",
-    "    mutations = set()\n",
-    "    for record in results:\n",
-    "        mutations.add(record.POS)\n",
-    "        \n",
-    "    truthColumn = np.zeros(len(svnCalls))\n",
-    "\n",
-    "    i = 0\n",
-    "    for pos in svnCalls['END']:\n",
-    "        if pos in mutations:\n",
-    "            truthColumn[i] = 1\n",
-    "        i += 1\n",
-    "        \n",
-    "    return truthColumn"
+    "svnCalls = pd.read_csv('SNVCalls_IS1.txt', delimiter='\\t', dtype={'CHROM':pd.np.str})\n",
+    "truths = TumorTruths('synthetic.challenge.set1.tumor.all.truth.vcf')\n",
+    "genomicFeatures = pd.read_csv('GenomicFeatures_IS1.txt', delimiter='\\t', dtype={'CHROM':pd.np.str}, usecols=['GCcontent', 'END'])"
    ]
   },
   {
@@ -47,27 +35,23 @@
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "122\n"
+     ]
+    }
+   ],
    "source": [
-    "svnCalls = pd.read_csv('SNVCalls_IS1.txt', delimiter='\\t', dtype={'CHROM':pd.np.str})\n",
-    "results = vcf.Reader(open('synthetic.challenge.set1.tumor.all.truth.vcf', 'rb'))\n",
-    "genomicFeatures = pd.read_csv('GenomicFeatures_IS1.txt', delimiter='\\t', dtype={'CHROM':pd.np.str})"
+    "resultsArray = truths.GetTruths(svnCalls)\n",
+    "print len(svnCalls.columns)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "resultsArray = GetResultsArray(svnCalls, results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -78,7 +62,7 @@
        "0.96532793990176247"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -111,9 +95,9 @@
    },
    "outputs": [],
    "source": [
-    "num_clusters = 6\n",
-    "k_means = cluster.KMeans(n_clusters=num_clusters)\n",
-    "k_means.fit(svnCalls[svnCalls.columns[3:-1]].T)"
+    "model = LogisticRegression()\n",
+    "X = (genomicFeatures['GCcontent'] - 0.5).values.reshape((len(genomicFeatures), 1))\n",
+    "model.fit(X, correctPredictions)"
    ]
   },
   {
@@ -124,13 +108,8 @@
    },
    "outputs": [],
    "source": [
-    "def TransformEuclideanPointsToPredictions(point):\n",
-    "    return 1 if point >= 0.5 else 0\n",
-    "\n",
-    "vfunc = np.vectorize(TransformEuclideanPointsToPredictions) \n",
-    "for i in range(0, num_clusters):\n",
-    "    clusterPredictions = vfunc(k_means.cluster_centers_[i])\n",
-    "    print sklearn.metrics.f1_score(clusterPredictions, resultsArray)"
+    "print model.coef_\n",
+    "print model.intercept_"
    ]
   },
   {
@@ -141,8 +120,10 @@
    },
    "outputs": [],
    "source": [
-    "bestCluster = svnCalls[svnCalls.columns[3:-1]][np.where(k_means.labels_ == 0)[0]]\n",
-    "clusterPredictions = mode(bestCluster, axis=1)[0]"
+    "lowGcContent = genomicFeatures[genomicFeatures['GCcontent'] < 0.14]['END']\n",
+    "# print svnCalls[svnCalls['END'].isin(lowGcContent)]\n",
+    "for caller in lowGcContent:\n",
+    "    svnCalls[caller] = np.zeros(len(svnCalls))"
    ]
   },
   {
@@ -153,18 +134,9 @@
    },
    "outputs": [],
    "source": [
-    "sklearn.metrics.f1_score(clusterPredictions, results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "svnCalls[svnCalls.columns[3:-1]]"
+    "# mostCommonPredictions = mode(svnCalls[svnCalls.columns[3:-1]], axis=1)[0]\n",
+    "# sklearn.metrics.f1_score(mostCommonPredictions, resultsArray)\n",
+    "print mode(svnCalls[svnCalls.columns[3:-1]])"
    ]
   },
   {
