got k-medians working

--- a/challenge.ipynb
+++ b/challenge.ipynb
@@ -8,11 +8,13 @@
    },
    "outputs": [],
    "source": [
+    "from __future__ import division\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.stats import mode\n",
     "import sklearn.metrics\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.linear_model import LinearRegression\n",
     "from TumorTruths import TumorTruths"
    ]
   },
@@ -26,12 +28,12 @@
    "source": [
     "svnCalls = pd.read_csv('SNVCalls_IS1.txt', delimiter='\\t', dtype={'CHROM':pd.np.str})\n",
     "truths = TumorTruths('synthetic.challenge.set1.tumor.all.truth.vcf')\n",
-    "genomicFeatures = pd.read_csv('GenomicFeatures_IS1.txt', delimiter='\\t', dtype={'CHROM':pd.np.str}, usecols=['GCcontent', 'END'])"
+    "genomicFeatures = pd.read_csv('GenomicFeatures_IS1.txt', delimiter='\\t', dtype={'CHROM':pd.np.str})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +64,7 @@
        "0.96532793990176247"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +76,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "noSomatic = [i for i in range(len(resultsArray)) if resultsArray[i] == 0]\n",
+    "nonSomaticSvns = svnCalls.iloc[noSomatic]\n",
+    "nonSomaticGenomicFeatures = genomicFeatures[genomicFeatures['END'].isin(nonSomaticSvns['END'])]\n",
+    "numFalsePositives = nonSomaticSvns[nonSomaticSvns.columns[3:-1]].sum(axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -89,27 +105,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "3335821\n"
+     ]
+    }
+   ],
    "source": [
-    "model = LogisticRegression()\n",
-    "X = (genomicFeatures['GCcontent'] - 0.5).values.reshape((len(genomicFeatures), 1))\n",
-    "model.fit(X, correctPredictions)"
+    "features = nonSomaticGenomicFeatures\n",
+    "# features = genomicFeatures\n",
+    "predictions = numFalsePositives.values\n",
+    "# predictions = correctPredictions\n",
+    "# def Test(features, predictions):\n",
+    "model = LinearRegression()\n",
+    "#     X = (genomicFeatures['GCcontent'] - 0.5).values.reshape((len(genomicFeatures), 1))\n",
+    "\n",
+    "X1 = (features['NormalCoverage'] / (features['NormalCoverage'] + features['TumourCoverage'])) - 0.5\n",
+    "X2 = features['GCcontent'] - 0.5\n",
+    "X3 = features['Distance']\n",
+    "X = np.ndarray((len(features), 2))\n",
+    "X[:,0] = X1 * X1\n",
+    "X[:,1] = X2 * X2\n",
+    "model.fit(X, predictions)\n",
+    "print np.min(features['Distance'])\n",
+    "print np.max(features['Distance'])\n",
+    "# print features.columns\n",
+    "# print np.std(features['Distance'])\n",
+    "# print features['Distance']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 14.92168833   6.93074815]\n",
+      "1.5759031614\n",
+      "0.0138441172373\n"
+     ]
+    }
+   ],
    "source": [
+    "# model = Test(nonSomaticGenomicFeatures, numFalsePositives)\n",
+    "# print model.coef_\n",
+    "# print correctPredictions.shape\n",
+    "# print np.zeros((100,)).T.shape\n",
+    "# print correctPredictions\n",
     "print model.coef_\n",
-    "print model.intercept_"
+    "print model.intercept_\n",
+    "print model.score(X, predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 211001)\n",
+      "(211001,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print X.T.shape\n",
+    "print predictions.values.shape"
    ]
   },
   {
@@ -138,6 +217,27 @@
     "# sklearn.metrics.f1_score(mostCommonPredictions, resultsArray)\n",
     "print mode(svnCalls[svnCalls.columns[3:-1]])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "col =  genomicFeatures['TumourCoverage'] / (genomicFeatures['NormalCoverage'] + genomicFeatures['TumourCoverage'])\n",
+    "len(genomicFeatures[col < 0.13])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
