--- a/clusters.ipynb
+++ b/clusters.ipynb
@@ -15,7 +15,9 @@
     "from scipy.stats import mode\n",
     "from sklearn.metrics import f1_score\n",
     "from sklearn import cluster\n",
-    "from sklearn.metrics.pairwise import cosine_similarity"
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "from sklearn.metrics.pairwise import manhattan_distances\n",
+    "from sklearn.metrics.pairwise import euclidean_distances"
    ]
   },
   {
@@ -32,22 +34,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "226\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "resultsArray = truths.GetTruths(svnCalls)\n",
-    "print len(svnCalls.columns)"
+    "resultsArray = truths.GetTruths(svnCalls)"
    ]
   },
   {
@@ -75,32 +68,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "num_clusters = 5\n",
+    "clusters, centers = kClustering(svnCalls[svnCalls.columns[3:-1]].T.values, np.median, manhattan_distances, num_clusters)\n",
+    "# k_means = cluster.KMeans(n_clusters=num_clusters)\n",
+    "# k_means.fit(svnCalls[svnCalls.columns[3:-1]].T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def TransformEuclideanPointsToPredictions(point):\n",
+    "    return 1 if point >= 0.50 else 0\n",
+    "\n",
+    "toPredictions = np.vectorize(TransformEuclideanPointsToPredictions) \n",
+    "clusterPredictions = np.zeros(len(resultsArray))\n",
+    "for i in range(0, num_clusters):\n",
+    "#     weight = len([1 for num in k_means.labels_  if num == i ])\n",
+    "    weight = len([1 for num in clusters  if num == i ])\n",
+    "#     distances = manhattan_distances(svnCalls[svnCalls.columns[3:-1]].T, k_means.cluster_centers_[i])\n",
+    "    distances = manhattan_distances(svnCalls[svnCalls.columns[3:-1]].T, centers[i])\n",
+    "    bestIndex = np.argmin(distances)\n",
+    "    representativeCaller = svnCalls[svnCalls.columns[3 + bestIndex]]\n",
+    "    clusterPredictions += weight * representativeCaller\n",
+    "\n",
+    "# clusterPredictions /= len(k_means.labels_)\n",
+    "clusterPredictions /= len(clusters)\n",
+    "clusterPredictions = toPredictions(clusterPredictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "MemoryError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mMemoryError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-d1a6c6f46ae6>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mnum_clusters\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mk_means\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcluster\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mKMeans\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_clusters\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mnum_clusters\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mk_means\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msvnCalls\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0msvnCalls\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32mc:\\Python27\\lib\\site-packages\\sklearn\\cluster\\k_means_.pyc\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, X, y)\u001b[0m\n\u001b[0;32m    792\u001b[0m                 \u001b[0mprecompute_distances\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprecompute_distances\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    793\u001b[0m                 \u001b[0mtol\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtol\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mrandom_state\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mrandom_state\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy_x\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy_x\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 794\u001b[1;33m                 n_jobs=self.n_jobs)\n\u001b[0m\u001b[0;32m    795\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    796\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Python27\\lib\\site-packages\\sklearn\\cluster\\k_means_.pyc\u001b[0m in \u001b[0;36mk_means\u001b[1;34m(X, n_clusters, init, precompute_distances, n_init, max_iter, verbose, tol, random_state, copy_x, n_jobs, return_n_iter)\u001b[0m\n\u001b[0;32m    254\u001b[0m     \u001b[0mbest_inertia\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minfty\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    255\u001b[0m     \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mas_float_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy_x\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 256\u001b[1;33m     \u001b[0mtol\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_tolerance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtol\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    257\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    258\u001b[0m     \u001b[1;31m# If the distances are precomputed every job will create a matrix of shape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Python27\\lib\\site-packages\\sklearn\\cluster\\k_means_.pyc\u001b[0m in \u001b[0;36m_tolerance\u001b[1;34m(X, tol)\u001b[0m\n\u001b[0;32m    145\u001b[0m         \u001b[0mvariances\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmean_variance_axis\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    146\u001b[0m     \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 147\u001b[1;33m         \u001b[0mvariances\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvar\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    148\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvariances\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mtol\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    149\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\Python27\\lib\\site-packages\\numpy\\core\\fromnumeric.pyc\u001b[0m in \u001b[0;36mvar\u001b[1;34m(a, axis, dtype, out, ddof, keepdims)\u001b[0m\n\u001b[0;32m   2928\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2929\u001b[0m     return _methods._var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n\u001b[1;32m-> 2930\u001b[1;33m                                 keepdims=keepdims)\n\u001b[0m",
-      "\u001b[1;32mc:\\Python27\\lib\\site-packages\\numpy\\core\\_methods.pyc\u001b[0m in \u001b[0;36m_var\u001b[1;34m(a, axis, dtype, out, ddof, keepdims)\u001b[0m\n\u001b[0;32m    100\u001b[0m     \u001b[1;31m# Note that x may not be inexact and that we need it to be an array,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    101\u001b[0m     \u001b[1;31m# not a scalar.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 102\u001b[1;33m     \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0masanyarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0marrmean\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    103\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0missubclass\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0marr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcomplexfloating\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    104\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mum\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmultiply\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mum\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconjugate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mout\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreal\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mMemoryError\u001b[0m: "
-     ]
+     "data": {
+      "text/plain": [
+       "0.87254795315276124"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "num_clusters = 5\n",
-    "k_means = cluster.KMeans(n_clusters=num_clusters)\n",
-    "k_means.fit(svnCalls[svnCalls.columns[3:-1]].T)"
+    "f1_score(clusterPredictions, resultsArray)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from __future__ import division\n",
+    "import numpy as np\n",
+    "import math\n",
+    "from sklearn.metrics import pairwise\n",
+    "\n",
+    "def kMedoids(data, func, dist_func, k=5):\n",
+    "\n",
+    "    cluster = np.zeros(len(data))\n",
+    "    finished = False\n",
+    "    medoids = np.copy(data[0:5])\n",
+    "\n",
+    "    for i in range(len(data)):\n",
+    "        distances = dist_func(data[i], medoids)\n",
+    "        cluster[i] = np.argmin(distances)\n",
+    "        \n",
+    "    for i in range(k):\n",
+    "        \n",
+    "            \n",
+    "#             d1 = dist_func(data[i], center1)\n",
+    "#             d2 = dist_func(data[i], center2)\n",
+    "#             newVal = 0 if (min(d1, d2) == d1) else 1\n",
+    "\n",
+    "#             if (newVal != cluster[i]):\n",
+    "#                 finished = False\n",
+    "# \n",
+    "#             cluster[i] = newVal\n",
+    "#         center1 = func(data[np.where(cluster == 0)], axis=0)\n",
+    "#         center2 = func(data[np.where(cluster == 1)], axis=0)\n",
+    "\n",
+    "#     return cluster, centers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "kMedoids(svnCalls[svnCalls.columns[3:-1]].T.values, np.median, manhattan_distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import pam\n",
+    "\n",
+    "results = pam.kmedoids(svnCalls[svnCalls.columns[3:-1]].T, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print results[2]"
    ]
   },
   {
@@ -116,14 +217,16 @@
     "\n",
     "toPredictions = np.vectorize(TransformEuclideanPointsToPredictions) \n",
     "clusterPredictions = np.zeros(len(resultsArray))\n",
-    "for i in range(0, num_clusters):\n",
-    "    weight = len([1 for num in k_means.labels_  if num == i ])\n",
-    "    cosineSimilarities = cosine_similarity(svnCalls[svnCalls.columns[3:-1]].T, k_means.cluster_centers_[i])\n",
-    "    bestIndex = np.argmax(cosineSimilarities)\n",
-    "    representativeCaller = svnCalls[svnCalls.columns[3 + bestIndex]]\n",
+    "for i in range(0, 5):\n",
+    "    weight = len(results[2][results[1][i]])\n",
+    "    print weight\n",
+    "    representativeCaller = svnCalls[svnCalls.columns[3 + results[1][i]]] \n",
+    "#     print representativeCaller\n",
     "    clusterPredictions += weight * representativeCaller\n",
     "\n",
-    "clusterPredictions /= len(k_means.labels_)\n",
+    "print np.max(clusterPredictions)\n",
+    "print len(clusterPredictions)\n",
+    "clusterPredictions /= len(svnCalls.columns) - 3\n",
     "clusterPredictions = toPredictions(clusterPredictions)"
    ]
   },
@@ -135,7 +238,69 @@
    },
    "outputs": [],
    "source": [
-    "f1_score(clusterPredictions, resultsArray)"
+    "print np.max(clusterPredictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print cosine_similarity(svnCalls[svnCalls.columns[58]], svnCalls[svnCalls.columns[6]] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def kClustering(data, func, dist_func, k):\n",
+    "\n",
+    "    clusters = np.zeros(len(data))\n",
+    "    centers = np.copy(data[0:k])\n",
+    "    \n",
+    "    nextPossibleStartingCenter = 1\n",
+    "    centersChosen = 1\n",
+    "    while centersChosen < k:\n",
+    "        centerAlreadyIncluded = False\n",
+    "        \n",
+    "        for i in range(centersChosen):\n",
+    "            centerAlreadyIncluded |= np.array_equal(centers[i], data[nextPossibleStartingCenter])\n",
+    "                \n",
+    "        if not centerAlreadyIncluded:\n",
+    "            centers[centersChosen] = data[nextPossibleStartingCenter]\n",
+    "            centersChosen += 1\n",
+    "            \n",
+    "        nextPossibleStartingCenter += 1\n",
+    "\n",
+    "    while True:\n",
+    "        distances = dist_func(data, centers)\n",
+    "        newClusters = np.argmin(distances, axis=1)\n",
+    "    \n",
+    "        if np.array_equal(newClusters, clusters):\n",
+    "            return clusters, centers\n",
+    "\n",
+    "        clusters = newClusters\n",
+    "        centers = np.array([func(data[np.where(clusters == i)], axis=0) for i in range(k)])\n",
+    "\n",
+    "data = np.array(((0, 0),(0, 1),(0, 2),(0, 3),(0, 4),(0, 5),(1, 0),(1, 1),(1, 2),(1, 3),(1, 4),(1, 5),(3, 4),(3, 5)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print (svnCalls[svnCalls.columns[3:-1]]).T.values[1].shape"
    ]
   },
   {
