calculated best percentile

--- a/clusters.ipynb
+++ b/clusters.ipynb
@@ -14,10 +14,7 @@
     "from TumorTruths import TumorTruths\n",
     "from scipy.stats import mode\n",
     "from sklearn.metrics import f1_score\n",
-    "# from sklearn import cluster\n",
-    "# from sklearn.metrics.pairwise import cosine_similarity\n",
     "from sklearn.metrics.pairwise import manhattan_distances\n",
-    "# from sklearn.metrics.pairwise import euclidean_distances\n",
     "from DistanceClustering import DistanceClustering"
    ]
   },
@@ -25,42 +22,18 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "svnCalls = pd.read_csv('SNVCalls_IS4.txt', delimiter='\\t', dtype={'CHROM':pd.np.str})\n",
-    "truths = TumorTruths('synthetic.challenge.set4.tumour.25pctmasked.truth.vcf')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "resultsArray = truths.GetTruths(svnCalls)\n",
-    "svnCalls = svnCalls[svnCalls.columns[3:-1]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "class SomaticMutationClassifier:\n",
     "    \n",
-    "    def __init__(self, num_clusters, inflection_point):\n",
+    "    def __init__(self, num_clusters, percentile):\n",
     "        self.num_clusters = num_clusters\n",
-    "        self.transformToPredictions = np.vectorize(lambda x: 1 if x >= inflection_point else 0) \n",
+    "        self.transformToPredictions = np.vectorize(lambda x: 1 if x >= percentile else 0) \n",
     "    \n",
     "    def fit(self, df):\n",
-    "        kMediansClustering = DistanceClustering(num_clusters, manhattan_distances, np.median)\n",
+    "        kMediansClustering = DistanceClustering(self.num_clusters, manhattan_distances, np.median)\n",
     "        self.clusters, self.centers = kMediansClustering.fit(df.T.values)\n",
     "        \n",
     "    def predict(self, df):\n",
@@ -79,67 +52,64 @@
     "        predictions /= len(self.clusters)\n",
     "        predictions = self.transformToPredictions(predictions) \n",
     "        \n",
-    "        return predictions, callersInPipeline\n",
+    "        return predictions, callersInPipeline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "svnFiles = ['SNVCalls_IS1.txt', 'SNVCalls_IS2.txt', 'SNVCalls_IS3.txt', 'SNVCalls_IS4.txt']\n",
+    "truthFiles = ['synthetic.challenge.set1.tumor.all.truth.vcf', 'synthetic.challenge.set2.tumor.all.truth.vcf', 'synthetic.challenge.set3.tumor.20pctmasked.truth.vcf', 'synthetic.challenge.set4.tumour.25pctmasked.truth.vcf']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.974775545105\n",
+      "0.9400674968\n",
+      "0.972480696892\n",
+      "0.872547953153\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(len(svnFiles)):\n",
+    "    svnCalls = pd.read_csv(svnFiles[i], delimiter='\\t', dtype={'CHROM':pd.np.str})\n",
+    "    truths = TumorTruths(truthFiles[i])\n",
     "\n",
-    "num_clusters = 5\n",
-    "somaticMutationClassifier = SomaticMutationClassifier(num_clusters, 0.50)\n",
-    "somaticClustering.fit(svnCalls)\n",
-    "predictions, callersInPipeline = somaticMutationClassifier.predict(svnCalls)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.87254795315276124"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "f1_score(predictions, resultsArray)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.83674707935062975"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mostCommonPredictions = mode(svnCalls, axis=1)[0]\n",
-    "f1_score(mostCommonPredictions, resultsArray)"
+    "    resultsArray = truths.GetTruths(svnCalls)\n",
+    "    svnCalls = svnCalls[svnCalls.columns[3:-1]]\n",
+    "    \n",
+    "    somaticMutationClassifier = SomaticMutationClassifier(num_clusters=5, percentile=0.30)\n",
+    "    somaticMutationClassifier.fit(svnCalls)\n",
+    "    predictions, callersInPipeline = somaticMutationClassifier.predict(svnCalls)\n",
+    "    print f1_score(predictions, resultsArray)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "mostCommonPredictions = mode(svnCalls, axis=1)[0]\n",
+    "f1_score(mostCommonPredictions, resultsArray)"
+   ]
   }
  ],
  "metadata": {
