moved best percentile calculation to its own file

--- a/challenge.ipynb
+++ b/challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -15,7 +15,8 @@
     "import sklearn.metrics\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from TumorTruths import TumorTruths"
+    "from TumorTruths import TumorTruths\n",
+    "from scipy.stats import pearsonr"
    ]
   },
   {
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -114,32 +115,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "3335821\n"
+      "(-0.043962598664973547, 9.0647093464881162e-91)\n",
+      "(0.00019468320114118012, 0.92874264744389567)\n",
+      "(0.063065519157668587, 7.0250801594787612e-185)\n"
      ]
     }
    ],
    "source": [
     "features = nonSomaticGenomicFeatures\n",
-    "# features = genomicFeatures\n",
     "predictions = numFalsePositives.values\n",
-    "# predictions = correctPredictions\n",
-    "# def Test(features, predictions):\n",
-    "model = LinearRegression()\n",
-    "#     X = (genomicFeatures['GCcontent'] - 0.5).values.reshape((len(genomicFeatures), 1))\n",
-    "\n",
-    "X1 = (features['NormalCoverage'] / (features['NormalCoverage'] + features['TumourCoverage'])) - 0.5\n",
-    "X2 = features['GCcontent'] - 0.5\n",
-    "X3 = features['Distance']\n",
-    "X = np.ndarray((len(features), 2))\n",
-    "X[:,0] = X1 * X1\n",
-    "X[:,1] = X2 * X2\n",
-    "model.fit(X, predictions)\n",
-    "print np.min(features['Distance'])\n",
-    "print np.max(features['Distance'])\n",
-    "# print features.columns\n",
-    "# print np.std(features['Distance'])\n",
-    "# print features['Distance']"
+    "print pearsonr(features['GCcontent'], predictions)\n",
+    "print pearsonr(features['StrandBias'], predictions)\n",
+    "print pearsonr(features['TumourCoverage'] / (features['NormalCoverage'] + features['TumourCoverage']), predictions)\n",
+    "# model = LinearRegression()\n",
+    "# X1 = (features['NormalCoverage'] / (features['NormalCoverage'] + features['TumourCoverage'])) - 0.5\n",
+    "# X2 = features['GCcontent'] - 0.5\n",
+    "# X3 = features['Distance']\n",
+    "# X = np.ndarray((len(features), 2))\n",
+    "# X[:,0] = X1 * X1\n",
+    "# X[:,1] = X2 * X2\n",
+    "# model.fit(X, predictions)\n",
+    "# print np.min(features['Distance'])\n",
+    "# print np.max(features['Distance'])"
    ]
   },
   {
